added navbar and links to contact and index files

--- a/style.css
+++ b/style.css
@@ -9,3 +9,17 @@ body{
 header{
     font-size: 36px;
 }
+
+.mainCouple{
+    margin: 10px;
+}
+
+.mainPets{
+    margin: 10px;
+}
+
+.footerContainer{
+    background-color: black;
+    text-align: center;
+    color: white;
+}
